# sandbox

./: .dockerignore  .gitignore  Dockerfile  LICENSE  pyproject.toml
docker/: sandbox.Dockerfile
src/mcp/bindings/: eslint.config.js  generate.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/mcp/bindings/src/: client.ts  converter.ts  executor-utils.ts  executor.ts  generate.ts
src/mcp/bindings/tests/: client.test.ts  converter.test.ts  generate.test.ts
src/mcp/bindings/tests/fixtures/: mock-mcp-responses.ts
src/mcp/bindings/tests/mocks/: mock-mcp-server.ts
src/sandbox/: __init__.py  __main__.py  core.py  environment.py  sandbox.py  server.py  utils.py
