[project]
name = "sandbox"
version = "0.1.0"
description = "A sandbox for testing and experimenting with Python code."
readme = "README.md"
authors = [
    { name = "daveokpare", email = "okparedave@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
]

[project.scripts]
sandbox = "sandbox:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
