[project]
name = "sandbox"
version = "0.1.0"
description = "A sandbox for testing and experimenting with Python code."
readme = "README.md"
authors = [
    { name = "daveokpare", email = "okparedave@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "loguru>=0.7.3",
    "mcp>=1.21.0",
    "mcp2py>=0.6.0",
]

[project.scripts]
sandbox-build = "sandbox:build_image"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
