[project]
name = "mcp-server-sandbox"
version = "0.1.0"
description = "Model Context Protocol server for Docker sandbox execution"
readme = "README.md"
authors = [
    { name = "daveokpare", email = "okparedave@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "loguru>=0.7.3",
    "mcp>=1.21.0",
    "fastmcp>=2.0.0",
]
keywords = ["mcp", "docker", "sandbox", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
mcp-server-sandbox = "sandbox.__main__:main"
sandbox-build = "sandbox.utils:build_image"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
